syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "transaction.proto";
import "receipt.proto";
import "block.proto";
import "chain.proto";

service ChainBroker {
    rpc Subscribe (SubscriptionRequest) returns (stream Response) {
        option (google.api.http) = {
            get: "/v1/subscription"
        };
    }

    rpc GetBlockHeader (GetBlockHeaderRequest) returns (stream pb.BlockHeader) {
        option (google.api.http) = {
            get: "/v1/block_header"
        };
    }

    rpc GetInterchainTxWrapper (GetInterchainTxWrapperRequest) returns (stream InterchainTxWrapper) {
        option (google.api.http) = {
            get: "/v1/interchain_tx_wrapper"
        };
    }

    rpc SendTransaction (SendTransactionRequest) returns (TransactionHashMsg) {
        option (google.api.http) = {
            post: "/v1/transaction"
            body: "*"
        };
    }

    rpc GetTransaction (TransactionHashMsg) returns (GetTransactionResponse) {
        option (google.api.http) = {
            get: "/v1/transaction/{tx_hash}"
        };
    }

    rpc GetReceipt (TransactionHashMsg) returns (pb.Receipt) {
        option (google.api.http) = {
            get: "/v1/receipt/{tx_hash}"
        };
    }

    rpc GetBlock (GetBlockRequest) returns (pb.Block) {
        option (google.api.http) = {
            get: "/v1/block"
        };
    }

    rpc GetBlocks (GetBlocksRequest) returns (GetBlocksResponse) {
        option (google.api.http) = {
            get: "/v1/blocks"
        };
    }

    rpc GetChainMeta (Request) returns (pb.ChainMeta) {
        option (google.api.http) = {
            get: "/v1/chain_meta"
        };
    }

    rpc GetInfo (Request) returns (Response) {
        option (google.api.http) = {
            get: "/v1/info"
        };
    }

    rpc GetAccountBalance (Address) returns (Response) {
        option (google.api.http) = {
            get: "/v1/account_balance/{address}"
        };
    }
}

message GetBlockHeaderRequest {
    uint64 begin = 1;
    uint64 end = 2;
}

message GetInterchainTxWrapperRequest {
    uint64 begin = 1;
    uint64 end = 2;
    string pid = 3;
}

message TransactionHashMsg {
    string tx_hash = 1;
}

message GetBlockRequest {
    enum Type {
        HEIGHT = 0;
        HASH = 1;
    }
    Type type = 1;
    string value = 2;
}

message Request {
    enum Type {
        CHAIN_STATUS = 0;
        NETWORK = 1;
        VALIDATORS = 2;
    }
    Type type = 1;
}

message Response {
    bytes data = 1;
}

message Address {
    string address = 1;
}

message SendTransactionRequest {
    bytes version = 1;
    bytes from = 2;
    bytes to = 3;
    int64 timestamp = 4;
    pb.TransactionData data = 6;
    int64 nonce = 7;
    bytes signature = 8;
    bytes extra = 9;
}

message GetBlocksRequest {
    uint64 start = 1;
    uint64 end = 2;
}

message GetBlocksResponse {
    repeated pb.Block blocks = 1;
}

message SubscriptionRequest {
    enum Type {
        BLOCK = 0;
        EVENT = 1;
        INTERCHAIN_TX = 2;
        BLOCK_HEADER = 3;
        INTERCHAIN_TX_WRAPPER = 4;
    }
    Type type = 1;
    bytes extra = 2;
}

message GetTransactionResponse {
    pb.Transaction tx = 1;
    pb.TransactionMeta tx_meta = 2;
}

message InterchainTxWrapper {
    repeated bytes transaction_hashes = 1;
    repeated Transaction transactions = 2;
    uint64 height = 3;
}
